added an empty js file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="main.css" />
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,900,400italic,300' rel='stylesheet' type='text/css'>
+        <script src="myscript.js"></script>
         <title>Try again</title>
     </head>
     <body>
